--- a/WheelOfFortune/WheelOfFortune.csproj
+++ b/WheelOfFortune/WheelOfFortune.csproj
@@ -34,6 +34,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Challenge.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Round.cs" />
+    <Compile Include="Turn.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
