--- a/WheelOfFortune/WheelOfFortune.csproj
+++ b/WheelOfFortune/WheelOfFortune.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Round.cs" />
     <Compile Include="Turn.cs" />
+    <Compile Include="Wheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
